[package]
name = "himalaya-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
clap = { version = "3.0.14", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
linkify = "0.8"
